--- a/style.css
+++ b/style.css
@@ -30,3 +30,17 @@ h2{
         90% { background-color: #ddd3e8ff; }
         100% { background-color: #ffade0ff; }
     }
+
+.mercedes{
+    background-image: url(https://cdn.dribbble.com/uploads/47178/original/mercedes-bazan.png?1689174566&format=webp&resize=273x340&vertical=center);
+}
+
+.aurilien{ 
+    background-image: url(https://cdn.dribbble.com/uploads/47170/original/cd3266dde4f00a5d6a509c7375ddaecd.png?1685644840&format=webp&resize=273x340&vertical=center);
+}
+
+
+.carosello::-webkit-scrollbar{
+    display: none;
+}
+
